--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "predict-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://binhle001.github.io/LoL-Predict/",
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.6.3",
@@ -12,6 +13,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
