--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "gh-pages": "^2.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-loader-spinner": "^2.3.0",
+    "react-scripts": "2.1.1",
+    "react-select": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
